Feed overflow fix

--- a/app/styles/views/feed.scss
+++ b/app/styles/views/feed.scss
@@ -27,8 +27,14 @@
     }
 
     .feed-items {
-        height: 90%;
+        height: 70%;
         width: 100%;
+
+        overflow-y: scroll;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
 
         .feed-item {
             position: relative;
